--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 
 # the name of Camel
-camel.springboot.name = MyCamel
+#camel.springboot.name = MyCamel
 
 # what to say
-greeting = Hello World
+#greeting = Hello World
 
 # how often to trigger the timer
-timer.period = 2000
+#timer.period = 2000
 
 # to automatic shutdown the JVM after a period of time
 #camel.springboot.duration-max-seconds=60
@@ -22,8 +22,8 @@ management.endpoints.web.exposure.include=info,health,camelroutes
 management.endpoint.health.enabled = true
 
 # allow to obtain basic information about camel routes (read only mode)
-management.endpoint.camelroutes.enabled = true
-management.endpoint.camelroutes.read-only = true
+#management.endpoint.camelroutes.enabled = true
+#management.endpoint.camelroutes.read-only = true
 
 # to configure logging levels
 #logging.level.org.springframework = INFO
