--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 # the name of Camel
-#camel.springboot.name = MyCamel
+camel.springboot.name = MyCamel
 
 # what to say
 #greeting = Hello World
@@ -30,3 +30,328 @@ management.endpoint.health.enabled = true
 #logging.level.org.apache.camel.spring.boot = INFO
 #logging.level.org.apache.camel.impl = DEBUG
 #logging.level.sample.camel = DEBUG
+server.port=8081
+
+# to keep the JVM running
+camel.springboot.main-run-controller = true
+
+server.servlet.context-path=/api
+endpoints.enabled = true
+endpoints.health.enabled = true
+
+####################################################################################################
+# CONFIGURACIONES REST BASE         
+####################################################################################################
+
+# Puerto de entrada a Resta base
+sap.host.port=8081
+
+# Container name
+container.name=${container:name}
+
+#Container IP
+container.ip=${container:localip}
+
+####################################################################################################
+# IDENTIFICADORES DE CANALES DE VENTAS      
+####################################################################################################
+
+# Identificador del canal de ventas para VTEX
+sc.vtex.id=ecommerce01
+
+# Identificador del canal de ventas para PrestaShop
+sc.prestashop.id=ecommerce03
+
+####################################################################################################
+# RELACION CANALES Y DESTINOS PARA COMPONENTE DE MENSAJERIA        
+####################################################################################################
+
+# Parametro para el canal de ventas ecommerce01 para actualizacion de precios
+sc.prices.msg.entity.ecommerce01=VTEX_PRICES
+
+# Parametro para el canal de ventas ecommerce03 para actualizacion de precios
+sc.prices.msg.entity.ecommerce03=PRESTASHOP_PRICES
+
+# Parametro para el canal de ventas pos01 para actualizacion de precios
+sc.prices.msg.entity.pos01=ICG_PRICES
+
+# Parametro para el canal de ventas ecommerce01 para actualizacion de inventarios
+sc.inventory.msg.entity.ecommerce01=VTEX_INVENTORY
+
+# Parametro para el canal de ventas ecommerce03 para actualizacion de inventarios
+sc.inventory.msg.entity.ecommerce03=PRESTASHOP_INVENTORY
+
+# Parametro para el canal de ventas subs01 para actualizacion de inventarios
+sc.inventory.msg.entity.subs01=SILENIO_INVENTORY
+
+# Parametro para el canal de ventas pos01 para actualizacion de inventarios
+sc.inventory.msg.entity.pos01=ICG_INVENTORY
+
+# Parametro para el canal de ventas ecommerce01 para generacion del despacho
+sc.dispatches.msg.entity.ecommerce01=VTEX_DISPATCH
+
+# Parametro para el canal de ventas ecommerce01 para generacion del despacho
+sc.dispatches.msg.entity.subs01=SILENIO_DISPATCH
+
+# Parametro para el canal de ventas ecommerce01 para generacion de la factura
+sc.invoice.msg.entity.ecommerce01=VTEX_INVOICE
+
+# Parametro para el canal de ventas ecommerce03 para generacion de la factura
+sc.invoice.msg.entity.ecommerce03=PRESTASHOP_INVOICE
+
+# Parametro para el canal de ventas subs01 para generacion de la factura
+sc.invoice.msg.entity.subs01=SILENIO_INVOICE
+
+# Parametro para el canal de ventas pos01 para generacion de la factura
+sc.invoice.msg.entity.pos01=ICG_INVOICE
+
+# Parametro para el canal de ventas ecommerce01 para creacion de la orden
+sc.orders.msg.entity.ecommerce01=SAP_ORDERS
+
+# Parametro para el canal de ventas edi para creacion de la orden
+sc.orders.msg.origin.ecommerce01=POSTMAN
+
+# Parametro para el canal de ventas edi para creacion de la orden
+sc.orders.msg.entity.edi=SAP_ORDERS
+
+# Parametro para el canal de ventas edi para creacion de la orden
+sc.orders.msg.origin.edi=POSTMAN
+
+# Parametro para el canal de ventas ecommerce01 para generacion o confirmacion de la orden
+sc.order.confirmation.msg.entity.ecommerce01=VTEX_ORDER_CONFIRMATION
+
+# Parametro para el canal de ventas ecommerce01 para licitacion de la orden
+sc.order.bid.msg.entity.ecommerce01=VTEX_SILENIO_ORDER_BID
+
+# Parametro para el canal de ventas ICG para licitacion de la orden
+sc.order.bid.msg.entity.pos01=ICG_SILENIO_ORDER_BID
+
+# Parametro para el canal de ventas ecommerce03 para generacion o confirmacion de la orden
+sc.order.confirmation.msg.entity.ecommerce03=PRESTASHOP_ORDER_CONFIRMATION
+
+# Parametro para el canal de ventas subs01 para generacion o confirmacion de la orden
+sc.order.confirmation.msg.entity.subs01=SILENIO_ORDER_CONFIRMATION
+
+# Parametro para el canal de ventas pos01 para generacion o confirmacion de la orden
+sc.order.confirmation.msg.entity.pos01=ICG_ORDER_CONFIRMATION
+
+# Parametro para el canal de ventas ecommerce01 para consulta de SKU
+sc.sku.ecommerce01=VTEX
+
+# Parametro para el canal de ventas Silenio orden de envio
+sc.order.dispatches.msg.entity.erp01=SAP_ORDER_DISPATCHES
+
+# Parametro para el canal de ventas Silenio para la actualizacion del ciente
+sc.customer.msg.entity.subs01=SILENIO_CUSTOMER
+
+# Parametro para validar el canal de silenio a SAP
+sc.order.mix.msg.entity.erp01=SAP_ORDERS_MIX
+
+# Parametro que envia a la ruta de Reportes
+crm.report.msg.entity=SAP_REPORT_SALESFORCE
+
+#Parametro para la queue
+crm.report.msg.queue=SAP_REPORT_SALESFORCE
+
+#Parametro para la queue
+crm.report.msg.queue=SAP_REPORT_SALESFORCE
+
+# Parametro que envia a la ruta de Recaudo
+collect.legis.msg.entity=SAP_REQUEST_COLLECT
+
+#Parametro para la queue
+collect.legis.msg.entity.queue=NormalizedCollectSyncPendingEvents
+
+#Parametro de Notificacion numero pedido
+sc.notification.order.number.entity=NOTIFICATION_ORDER_NUMBER
+
+#Parametro de Notificacion INFORMACIÓN FACTURA
+sc.notification.info.factura.entity=NOTIFICATION_INFO_FACTURA
+
+#Parametro de Notificacion ESTADO OPORTUNIDAD
+sc.notification.status.oportunidad.entity=ESTADO_OPORTUNIDAD
+
+#Parametro de Notificacion ESTADO OPORTUNIDAD
+sc.inside.number.printux=INSIDE_NUMBER_PRINTUX
+
+#Parametro de Reenvio numero de reserva
+sc.forwarding.reservation.printux=PRINTUX_REMISIONES_NOTIF
+
+#Parametro de actualizar cartera
+crm.salesforce.wallet.legis=REQUEST.SALESFORCE.WALLET.LEGIS
+
+#Parametro de envio de datos desde sap a salesforce reporte de recaudo
+sc.report.msg.entity.salesforce.collect=REPORT_SAP_SALESFORCE_COLLECT
+
+#Parametro de envio a sso
+sc.activation.legis.sso=COLLECT-LEGIS.REQUEST.SSO
+
+#Parametro de envio de creacion orden de recaudo de ambito juridico a Recaudo
+sc.report.msg.entity.drupal.collect=DRUPAL_CREATE_ORDERS_LEGIS
+
+#Parametro de recaudo a sap
+sc.activation.external.order=COLLECT_SERV_EXTERNAL
+
+#Parametro de envio de la cancelacion de la suscripcion  epayco en ambito juridico a Recaudo
+sc.report.msg.entity.drupal.collect.cancel=DRUPAL_CANCEL_SUSCRIPTION_LEGIS
+
+
+####################################################################################################
+# CONFIGURACION COMPONENTE DE MENSAJERIA        
+####################################################################################################
+
+# Pending Queue
+queuePendingName=RawSyncPendingEvents
+
+# Normalized Queue
+queuenormalized=NormalizedSyncPendingEvents
+
+# Normalized Queue para iFactura
+queueEinvoicingNormalized=NormalizedEinvoicingSyncPendingEvents
+
+# Normalized Queue para ecommerce01 (VTEX)
+sc.queue.target.msg.entity.ecommerce01=NormalizedVtexSyncPendingEvents
+
+# Normalized Queue para ecommerce03 (PRESTASHOP)
+sc.queue.target.msg.entity.ecommerce03=NormalizedPrestashopSyncPendingEvents
+
+# Normalized Queue para subs01 (Silenio)
+sc.queue.target.msg.entity.subs01=NormalizedSilenioSyncPendingEvents
+
+# Normalized Queue para erp01 (Sap)
+sc.queue.target.msg.entity.erp01=NormalizedSapSyncPendingEvents
+
+# Normalized Queue para pos01 (ICG)
+sc.queue.target.msg.entity.pos01=NormalizedIcgSyncPendingEvents
+
+# Normalized Queue para SALESFORCE
+sc.queue.target.msg.entity.salesforce=NormalizedSalesforceSyncPendingEvents
+
+# Normalized Queue para Printux
+sc.queue.target.msg.entity.printux=NormalizedPrintuxSyncPendingEvents
+
+# Normalized Queue SAP
+sap.legis.queue.entity=NormalizedSapSyncPendingEvents
+
+
+queuenormalized.maximumRedeliveries=3
+queuenormalized.redeliveryDelay=10000
+queuenormalized.maximumRedeliveryDelay=30000
+
+# NormalizedSyncFailed Queue
+queuenormalizedfailed=NormalizedSyncFailedDLQ
+queuenormalizedfailed.maximumRedeliveries=3
+queuenormalizedfailed.redeliveryDelay=10000
+queuenormalizedfailed.maximumRedeliveryDelay=30000
+
+####################################################################################################
+# ACCOUNTS CRM & ERP
+####################################################################################################
+
+#------------------------>SALESFORCE CRM<-----------------------#
+#Properties para consumo Direct-VM servicios SalesForce CRM
+#MSG.ORIGIN.CRM=SAP_ACCOUNTS
+#MSG.ENTITY.CRM=SALESFORCE_ACCOUNTS
+#JMS.TYPE.CRM=SALESFORCE_ACCOUNTS
+#ENTITY.CONTEXT.CRM=DevelopmentCRM
+MSG.ORIGIN.CRM=SALESFORCE
+MSG.ENTITY.CRM=ACCOUNT_CRM
+JMS.TYPE.CRM=ACCOUNT_CRM
+ENTITY.CONTEXT.CRM=crmAccountsSalesforceAdapter
+#------------------------>SAP ERP<------------------------------#
+#Properties para consumo Direct-VM servicios SAP Erp
+#MSG.ORIGIN.ERP=SALESFORCE
+#MSG.ENTITY.ERP=SAP
+#JMS.TYPE.ERP=SAP
+#ENTITY.CONTEXT.ERP=DevelopmentErp
+MSG.ORIGIN.ERP=SAP
+MSG.ENTITY.ERP=ACCOUNT_ERP
+JMS.TYPE.ERP=ACCOUNT_ERP
+ENTITY.CONTEXT.ERP=erpAccountsSalesforceAdapter
+
+####################################################################################################
+# SALESFORCE OPPORTUNITY
+####################################################################################################
+MSG.ORIGIN.PATCH.OPPORTUNITY.CRM=SAP
+MSG.ENTITY.PATCH.OPPORTUNITY.CRM=CHANGE_PATCH_OPPORTUNITY_CRM
+JMS.TYPE.PATCH.OPPORTUNITY.CRM=CHANGE_PATCH_OPPORTUNITY_CRM
+ENTITY.CONTEXT.PATCH.OPPORTUNITY.CRM=opportunityPatchSFAdapter
+
+####################################################################################################
+# SALES FORCE CONTACTS  CRM
+####################################################################################################
+
+MSG.ORIGIN.CC_CRM=SALESFORCE
+MSG.ENTITY.CC_CRM=CHANGE_CONTACT_CRM
+JMS.TYPE.CC_CRM=CHANGE_CONTACT_CRM
+ENTITY.CONTEXT.CC_CRM=SapChangeContactCrmAdapter
+
+MSG.ORIGIN.AC_CRM=SALESFORCE
+MSG.ENTITY.AC_CRM=ACCOUNT_CONTACT_CRM
+JMS.TYPE.AC_CRM=ACCOUNT_CONTACT_CRM
+ENTITY.CONTEXT.AC_CRM=SapAcountContactCrmAdapter
+
+####################################################################################################
+# SALES FORCE CONTACTS  ERP
+####################################################################################################
+
+MSG.ORIGIN.CC_ERP=SAP
+MSG.ENTITY.CC_ERP=CHANGE_CONTACT_ERP
+JMS.TYPE.CC_ERP=CHANGE_CONTACT_ERP
+ENTITY.CONTEXT.CC_ERP=SapChangeContactErpAdapter
+
+MSG.ORIGIN.AC_ERP=SAP
+MSG.ENTITY.AC_ERP=ACCOUNT_CONTACT_ERP
+JMS.TYPE.AC_ERP=ACCOUNT_CONTACT_ERP
+ENTITY.CONTEXT.AC_ERP=SapAcountContactErpAdapter
+
+rest.base.events.EventosIp=hestia:82
+
+####################################################################################################
+# PATH REST SERVICES OPPORTUNITY 
+
+####################################################################################################
+rest.path.get.opportunity=/v2/data/crm/opportunities/{opportunity-id}
+rest.path.patch.opportunity=/v2/data/crm/opportunities/{opportunity-id}/sales
+
+####################################################################################################
+# QUERIES GET JOURNAL 
+####################################################################################################
+
+rest.path.get.journal.message.id=/utils/logs/journal-messages/message-id/{messageId}
+rest.path.get.journal.journal.id=/utils/logs/journal-messages/journal-id/{journalId}
+journal.query.message.id=SELECT \
+       JOURNALID, \
+       MSG_ORIGIN, \
+       MSG_ENTITY, \
+       CAMEL_MSG_ID, \
+       ENTRY_TYPE, \
+       ENTRY_SUMMARY, \
+       ENTRY_PAYLOAD, \
+       FORMAT (REGISTRATIONDATE, 'dd/MM/yyyy hh:mm:ss') AS REGISTRATIONDATE, \
+       CREATE_USER, \
+       FORMAT (CREATE_DATE, 'dd/MM/yyyy hh:mm:ss') AS CREATE_DATE, \
+       FORMAT (MODIFY_DATE, 'dd/MM/yyyy hh:mm:ss') AS MODIFY_DATE \
+       FROM DBO.SYNC_JOURNAL \
+       WHERE CAMEL_MSG_ID = ':#messageId' \
+       ORDER BY JOURNALID DESC
+journal.query.journal.id=SELECT JOURNALID, ENTRY_PAYLOAD FROM DBO.SYNC_JOURNAL WHERE JOURNALID = :#journalId 
+
+####################################################################################################
+# PROPERTIES TRANSPORTISTAS  
+####################################################################################################
+MSG_ENTITY.DOCUMENT.TRANSPORT=DOCUMENT_TRANSPORT
+JMS_TYPE.DOCUMENT.TRANSPORT=DOCUMENT_TRANSPORT
+
+MSG_ENTITY.ASSIGN.GUIDE=SHIPMENT_TRANSPORT
+JMS_TYPE.ASSIGN.GUIDE=SHIPMENT_TRANSPORT
+
+MSG_ENTITY.TRACKING=TRACKING_TRANSPORT
+JMS_TYPE.TRACKING=TRACKING_TRANSPORT
+
+####################################################################################################
+# PROPERTIES EDI  
+####################################################################################################
+
+#entity edi
+edi.number.legis.msg.entity=EDI_ORDER_ERP
